[package]
name = "for_each_repeat"
description = "`Iterator::for_each` that can repeat current iteration"
version = "0.1.3"
edition = "2021"
authors = ["Zohnannor <zohnannor@gmail.com>"]
license-file = "LICENSE"
keywords = ["iterator", "trait"]
categories = ["no-std", "rust-patterns"]
repository = "https://github.com/zohnannor/for_each_repeat/"
readme = "README.md"
